Remove margin from card description to prevent overflow when selected

--- a/src/css/card.css
+++ b/src/css/card.css
@@ -45,6 +45,9 @@ span {
   font-weight: normal;
   color: var(--darkgrey);
   margin: 0;
+}
+
+.card-description.sp {
   margin-right: 1em;
 }
 
